# practice

./: CMakeLists.txt  get_env.cpp  test_sh.sh  test_um_move.cpp
cpp_practice/: CMakeLists.txt  operator_study.cpp  size_study.cpp  test.cpp  test.h
leetcode/: CMakeLists.txt
leetcode/src/: letter_comb.cpp
leetcode/src/dp/: CMakeLists.txt  lc746.cpp
leetcode/src/search/generate_parentheses/: CMakeLists.txt  lc22.cpp  lc301.cpp
leetcode/src/search/letter_combination_of_phone_number/: CMakeLists.txt  lc16.cpp  lc216.cpp  lc39.cpp  lc40.cpp  lc77.cpp  lc78.cpp  lc90.cpp
leetcode/src/search/permutations/: CMakeLists.txt  lc46.cpp  lc47.cpp  lc784.cpp  lc943.cpp  lc996.cpp
leetcode/src/search/sudoku_solver/: CMakeLists.txt  lc37.cpp  lc51.cpp
